# BC_homewok-04

./: CMakeLists.txt  README.md
Backup/: myString.cpp_  myString.h_
include/: myString.h
src/: myString.cpp  stringMain.cpp
